tests/files/type_checker_tests/should_pass/069.cmdr
//Test that post-decrement operations type check
a = 1.1;
x = a--;
